fix horizontal scrolling

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -323,6 +323,10 @@ blockquote > ol {
   display: block;
 }
 
+.gatsby-image-wrapper-constrained {
+  display: block;
+}
+
 .heart { 
   color: var(--color-primary);
 }
